--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,9 @@ python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 
+# Flask testing configuration
+flask_app = app:app
+
 # Output and reporting
 addopts = 
     --strict-markers
