--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -383,171 +383,128 @@ jobs:
           echo "" >> report.md
           echo "Generated on: $(date)" >> report.md
           echo "" >> report.md
-          
-          # Initialize counters
-          total_unit_tests=0
-          total_unit_passed=0
-          total_unit_failed=0
-          total_unit_errors=0
-          total_unit_coverage=0
-          
-          total_selenium_tests=0
-          total_selenium_passed=0
-          total_selenium_failed=0
-          total_selenium_errors=0
-          
+
           # Process unit tests
           xml_file="artifacts/test-results-3.11/test_results/unit-test-results.xml"
           if [ -f "$xml_file" ]; then
             echo "### 🐍 Python 3.11 Unit & Integration Tests" >> report.md
-            python3 << 'EOF'
-          import xml.etree.ElementTree as ET
-          import os
-          import sys
-
-          try:
-              tree = ET.parse('artifacts/test-results-3.11/test_results/unit-test-results.xml')
-              root = tree.getroot()
-              
-              if root.tag == 'testsuites':
-                  total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
-                  failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
-                  errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
-              else:
-                  total = int(root.get('tests', 0))
-                  failures = int(root.get('failures', 0))
-                  errors = int(root.get('errors', 0))
-              
-              passed = total - failures - errors
-              
-              print(f"- **Total Tests**: {total}")
-              print(f"- **Passed**: {passed} ✅")
-              print(f"- **Failed**: {failures} ❌")
-              print(f"- **Errors**: {errors} 🔥")
-              if total > 0:
-                  print(f"- **Pass Rate**: {passed * 100 // total}%")
-              print("")
-              
-              # Try to get coverage from coverage.xml
-              coverage = 0
-              try:
-                  if os.path.exists('artifacts/test-results-3.11/tests/reports/coverage_unit.xml'):
-                      cov_tree = ET.parse('artifacts/test-results-3.11/tests/reports/coverage_unit.xml')
-                      cov_root = cov_tree.getroot()
-                      coverage = float(cov_root.get('line-rate', 0)) * 100
-                      print(f"- **Code Coverage**: {coverage:.2f}%")
-              except:
-                  pass
-              
-              with open('/tmp/unit_3.11.txt', 'w') as f:
-                  f.write(f"{total},{passed},{failures},{errors},{coverage}")
-                  
-          except Exception as e:
-              print(f"❌ Error processing Python 3.11 results: {e}")
-              print("")
-          EOF
+            cat <<'PYTHON_SCRIPT' > gen_unit_report.py
+            import xml.etree.ElementTree as ET
+            import os
+            import sys
+            try:
+                tree = ET.parse('artifacts/test-results-3.11/test_results/unit-test-results.xml')
+                root = tree.getroot()
+                if root.tag == 'testsuites':
+                    total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
+                    failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
+                    errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
+                else:
+                    total = int(root.get('tests', 0))
+                    failures = int(root.get('failures', 0))
+                    errors = int(root.get('errors', 0))
+                passed = total - failures - errors
+                coverage = 0
+                try:
+                    if os.path.exists('artifacts/test-results-3.11/tests/reports/coverage_unit.xml'):
+                        cov_tree = ET.parse('artifacts/test-results-3.11/tests/reports/coverage_unit.xml')
+                        cov_root = cov_tree.getroot()
+                        coverage = float(cov_root.get('line-rate', 0)) * 100
+                except:
+                    pass
+                print(f"- **Total Tests**: {total}")
+                print(f"- **Passed**: {passed} ✅")
+                print(f"- **Failed**: {failures} ❌")
+                print(f"- **Errors**: {errors} 🔥")
+                if total > 0:
+                    print(f"- **Pass Rate**: {passed * 100 // total}%")
+                if coverage:
+                    print(f"\n- **Code Coverage**: {coverage:.2f}%")
+                print("")
+                with open('/tmp/unit_3.11.txt', 'w') as tf:
+                    tf.write(f"{total},{passed},{failures},{errors},{coverage}")
+            except Exception as e:
+                print(f"❌ Error processing Python 3.11 results: {e}\n")
+            PYTHON_SCRIPT
+            python3 gen_unit_report.py >> report.md
+            rm gen_unit_report.py
           else
             echo "⚠️ No unit test results found for Python 3.11" >> report.md
             echo "" >> report.md
           fi
-          
+
           # Process Selenium tests
           selenium_xml="artifacts/selenium-test-results/test_results/selenium-test-results.xml"
           if [ -f "$selenium_xml" ]; then
             echo "### 🌐 Selenium UI Tests" >> report.md
-            python3 << 'EOF'
-          import xml.etree.ElementTree as ET
-          import os
-
-          try:
-              tree = ET.parse('artifacts/selenium-test-results/test_results/selenium-test-results.xml')
-              root = tree.getroot()
-              
-              if root.tag == 'testsuites':
-                  total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
-                  failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
-                  errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
-              else:
-                  total = int(root.get('tests', 0))
-                  failures = int(root.get('failures', 0))
-                  errors = int(root.get('errors', 0))
-              
-              passed = total - failures - errors
-              
-              print(f"- **Total Tests**: {total}")
-              print(f"- **Passed**: {passed} ✅")
-              print(f"- **Failed**: {failures} ❌")
-              print(f"- **Errors**: {errors} 🔥")
-              if total > 0:
-                  print(f"- **Pass Rate**: {passed * 100 // total}%")
-              print("")
-              
-              with open('/tmp/selenium.txt', 'w') as f:
-                  f.write(f"{total},{passed},{failures},{errors}")
-                  
-          except Exception as e:
-              print(f"❌ Error processing Selenium results: {e}")
-              print("")
-          EOF
+            cat <<'PYTHON_SCRIPT' > gen_selenium_report.py
+            import xml.etree.ElementTree as ET
+            import os
+            try:
+                tree = ET.parse('artifacts/selenium-test-results/test_results/selenium-test-results.xml')
+                root = tree.getroot()
+                if root.tag == 'testsuites':
+                    total = sum(int(suite.get('tests', 0)) for suite in root.findall('testsuite'))
+                    failures = sum(int(suite.get('failures', 0)) for suite in root.findall('testsuite'))
+                    errors = sum(int(suite.get('errors', 0)) for suite in root.findall('testsuite'))
+                else:
+                    total = int(root.get('tests', 0))
+                    failures = int(root.get('failures', 0))
+                    errors = int(root.get('errors', 0))
+                passed = total - failures - errors
+                print(f"- **Total Tests**: {total}")
+                print(f"- **Passed**: {passed} ✅")
+                print(f"- **Failed**: {failures} ❌")
+                print(f"- **Errors**: {errors} 🔥")
+                if total > 0:
+                    print(f"- **Pass Rate**: {passed * 100 // total}%")
+                print("")
+                with open('/tmp/selenium.txt', 'w') as tf:
+                    tf.write(f"{total},{passed},{failures},{errors}")
+            except Exception as e:
+                print(f"❌ Error processing Selenium results: {e}\n")
+            PYTHON_SCRIPT
+            python3 gen_selenium_report.py >> report.md
+            rm gen_selenium_report.py
           else
             echo "⚠️ No Selenium test results found" >> report.md
             echo "" >> report.md
           fi
-          
-          # Generate overall summary with table
-          echo "## 🎯 Overall Summary" >> report.md
-          echo "" >> report.md
-          
-          python3 << 'EOF'
-          import os
-
-          # Aggregate unit test results
-          unit_total, unit_passed, unit_failed, unit_errors, unit_coverage = 0, 0, 0, 0, 0
-          try:
-              with open('/tmp/unit_3.11.txt', 'r') as f:
-                  data = f.read().strip().split(',')
-                  unit_total = int(data[0])
-                  unit_passed = int(data[1])
-                  unit_failed = int(data[2])
-                  unit_errors = int(data[3])
-                  unit_coverage = float(data[4])
-          except:
-              pass
-
-          # Aggregate selenium results
-          selenium_total, selenium_passed, selenium_failed, selenium_errors = 0, 0, 0, 0
-          try:
-              with open('/tmp/selenium.txt', 'r') as f:
-                  data = f.read().strip().split(',')
-                  selenium_total = int(data[0])
-                  selenium_passed = int(data[1])
-                  selenium_failed = int(data[2])
-                  selenium_errors = int(data[3])
-          except:
-              pass
-
-          # Overall totals
-          grand_total = unit_total + selenium_total
-          grand_passed = unit_passed + selenium_passed
-          grand_failed = unit_failed + selenium_failed
-          grand_errors = unit_errors + selenium_errors
 
           # Summary Table
-          print("### 📋 Summary Table")
-          print("| Category | Total Tests | Passed ✅ | Failed ❌ | Errors 🔥 | Pass Rate | Coverage |")
-          print("|----------|-------------|-----------|-----------|-----------|-----------|----------|")
-          print(f"| Unit & Integration | {unit_total} | {unit_passed} | {unit_failed} | {unit_errors} | {unit_passed * 100 // unit_total if unit_total > 0 else 0}% | {unit_coverage:.2f}% |")
-          print(f"| UI Tests | {selenium_total} | {selenium_passed} | {selenium_failed} | {selenium_errors} | {selenium_passed * 100 // selenium_total if selenium_total > 0 else 0}% | N/A |")
-          print(f"| **Total** | **{grand_total}** | **{grand_passed}** | **{grand_failed}** | **{grand_errors}** | **{grand_passed * 100 // grand_total if grand_total > 0 else 0}%** | N/A |")
-          print("")
-          EOF
-          
-          # Links to detailed reports
-          echo "### 🔗 Detailed Reports" >> report.md
-          echo "- [Unit & Integration Test Results (Python 3.11)](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
-          echo "- [Selenium UI Test Results](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
-          echo "- [Coverage Report](https://${{ github.repository_owner }}.github.io/${{ github.repository }}/coverage/${{ github.ref_name }}/index.html)" >> report.md
+          echo "### 📋 Summary Table" >> report.md
+          echo "| Category | Total Tests | Passed ✅ | Failed ❌ | Errors 🔥 | Pass Rate | Coverage |" >> report.md
+          echo "|----------|-------------|-----------|-----------|-----------|-----------|----------|" >> report.md
+          if [ -f /tmp/unit_3.11.txt ]; then
+            IFS=',' read total passed failed errors coverage < /tmp/unit_3.11.txt
+            passrate=0
+            if [ "$total" -gt 0 ]; then passrate=$((passed * 100 / total)); fi
+            echo "| Unit & Integration | $total | $passed | $failed | $errors | ${passrate}% | ${coverage}% |" >> report.md
+          fi
+          if [ -f /tmp/selenium.txt ]; then
+            IFS=',' read total passed failed errors < /tmp/selenium.txt
+            passrate=0
+            if [ "$total" -gt 0 ]; then passrate=$((passed * 100 / total)); fi
+            echo "| UI Tests | $total | $passed | $failed | $errors | ${passrate}% | N/A |" >> report.md
+          fi
+          if [ -f /tmp/unit_3.11.txt ] && [ -f /tmp/selenium.txt ]; then
+            IFS=',' read utotal upassed ufailed uerrors ucoverage < /tmp/unit_3.11.txt
+            IFS=',' read stotal spassed sfailed serrors < /tmp/selenium.txt
+            gtotal=$((utotal + stotal))
+            gpassed=$((upassed + spassed))
+            gfailed=$((ufailed + sfailed))
+            gerrors=$((uerrors + serrors))
+            gpassrate=0
+            if [ "$gtotal" -gt 0 ]; then gpassrate=$((gpassed * 100 / gtotal)); fi
+            echo "| **Total** | **$gtotal** | **$gpassed** | **$gfailed** | **$gerrors** | **${gpassrate}%** | N/A |" >> report.md
+          fi
           echo "" >> report.md
+          echo "## 🎯 Overall Summary" >> report.md
+          echo "" >> report.md
+          echo "### 🔗 Detailed Reports" >> report.md
+          echo "- [Unit & Integration Test Results (Python 3.11)](https://github.com/growwithgrepx/transPort/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
+          echo "- [Selenium UI Test Results](https://github.com/growwithgrepx/transPort/actions/runs/${{ github.run_id }}/artifacts)" >> report.md
+          echo "- [Coverage Report](https://growwithgrepx.github.io/growwithgrepx/transPort/coverage/fleet-enhancements/index.html)" >> report.md
 
       - name: Display report content
         run: |
